objects/TestClassAutomation__c/TestClassAutomation__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>The data of this custom setting is used for test classes automation</description>
    <label>TestClassAutomation</label>
</CustomObject>