objects/TestClassAutomation__c/fields/Mode__c.field-meta.xml
<CustomField>
    <fullName>Mode__c</fullName>
    <label>Mode</label>
    <length>30</length>
    <type>Text</type>
</CustomField>