objects/TestClassAutomation__c/fields/Recipients__c.field-meta.xml
<CustomField>
    <fullName>Recipients__c</fullName>
    <description>CSV of email ids</description>
    <label>Recipients</label>
    <length>255</length>
    <type>Text</type>
</CustomField>