objects/TestClassAutomation__c/fields/Test_Classes__c.field-meta.xml
<CustomField>
    <fullName>Test_Classes__c</fullName>
    <description>CSV of test classes names</description>
    <label>Test Classes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>